--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-react": "^4.3.4",
         "axios": "^1.6.4",
-        "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
+        "laravel-vite-plugin": "^1.2.0",
+        "vite": "^5.4.14"
+    },
+    "dependencies": {
+        "lodash": "^4.17.21"
     }
 }
