--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:b4S4QMK8iGShxckhUJTBrfnSlFtmkCZDPMtiPqa3+/A=
+APP_KEY=base64:ujPlBjHcrmg7Uo2YURVeZfx1mwFKkHXRN6M+bYvHn7g=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://laravel.local
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
